welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:8: error: unclosed character literal
    ecritMessage(''+compt)
                 ^ColumnByColumn:8: error: illegal start of simple expression
    ecritMessage(''+compt)
                 ^ColumnByColumn:9: error: ')' expected but '}' found.
  }
  ^